--- a/src/main.html
+++ b/src/main.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -32,13 +32,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -46,8 +46,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 3.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -55,13 +54,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -69,8 +68,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 4.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -78,13 +76,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -92,8 +90,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 5.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -101,13 +98,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -115,8 +112,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 6.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -124,13 +120,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -138,8 +134,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 7.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -147,13 +142,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -161,8 +156,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 8.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -170,13 +164,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -184,8 +178,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 9.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -193,13 +186,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -207,8 +200,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 10.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -216,13 +208,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -239,13 +231,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
                     <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
@@ -253,8 +245,7 @@
                 <div class="content-box__collection-price">
                     <span class="content-box__collection-price__throught">850</span>
                     <span class="content-box__collection-price__red">450</span></div>
-            </div>
-            <div class="content-box">
+            </div><div class="content-box">
                 <div class="content-box__img-holder">
                     <img src="img/photo 12.png" class="content-box__img" alt="photo-1">
                     <div class="content-box__learn-more">
@@ -262,13 +253,13 @@
                             <use href="img/sprite/sprite.svg#icon-search"></use>
                         </svg>
                         <a href="" class="content-box__learn-txt">Узнать больше</a>
-                        <svg class="content-box__btn-heart btn">
+                        <svg class="content-box__btn-heart btn" height="30px" width = "30px">
                             <use href="img/sprite/sprite.svg#icon-heart"></use>
                         </svg>
                     </div>
-                    <a class="content-box__sale">Акция</a>
+                    <div class="content-box__sale">Акция</div>
                 </div>
-                <div class="content-box__collection">Купальник 2018</div>
+                <div class="content-box__collection"><p>Купальник 2018</p></div>
                 <div class="content-box__collection-name">
                     <span>Купальник</span>
                     <span>Полоска</span>
