--- a/src/header.html
+++ b/src/header.html
@@ -4,55 +4,60 @@
       <div class="logo">
         <a href="index.html" class="link link-logo">SK WEAR ONLINE</a>
       </div>
-      <ul class="list menu">
-        <li class="link menu__item menu__item--active">
-          <select class="menu__select">
-            <option selected disabled hidden value="1">Каталог</option>
-            <option class="menu__select-option" value="2">Пункт 2</option>
-            <option class="menu__select-option" value="3">Пункт 3</option>
-          </select>
-        </li>
-        <li class="link menu__item menu__item--active">
-          <select class="menu__select">
-            <option selected disabled hidden value="1">Акции</option>
-            <option class="menu__select-option" value="2">Пункт 2</option>
-            <option class="menu__select-option" value="3">Пункт 3</option>
-          </select>
-        </li>
-        <li class="link menu__item menu__item--active">
-          <a href="reviews.html" class="link menu__link">Отзывы</a>
-        </li>
-        <li class="link menu__item menu__item--active">
-          <a href="#" class="link menu__link">О проекте </a>
-        </li>
-        <li class="link menu__item menu__item--active">
-          <a href="#" class="link menu__link">Контакты</a>
-        </li>
-      </ul>
-
+      <div class="menuWRP">
+        <ul class="list menu">
+          <li class="link menu__item menu__item--active">
+            <select class="menu__select">
+              <option selected disabled hidden value="1">Каталог</option>
+              <option class="menu__select-option" value="2">Пункт 2</option>
+              <option class="menu__select-option" value="3">Пункт 3</option>
+            </select>
+          </li>
+          <li class="link menu__item menu__item--active">
+            <select class="menu__select">
+              <option selected disabled hidden value="1">Акции</option>
+              <option class="menu__select-option" value="2">Пункт 2</option>
+              <option class="menu__select-option" value="3">Пункт 3</option>
+            </select>
+          </li>
+          <li class="link menu__item menu__item--active">
+            <a href="reviews.html" class="link menu__link">Отзывы</a>
+          </li>
+          <li class="link menu__item menu__item--active">
+            <a href="#" class="link menu__link">О проекте </a>
+          </li>
+          <li class="link menu__item menu__item--active">
+            <a href="#" class="link menu__link">Контакты</a>
+          </li>
+        </ul>
+      </div>
       <div class="au-form">
-        <button class="btn au-form__btn-login au-form__btn-login--active">
-          <svg class="au-form__icon-profile">
-            <use href="img/sprite/sprite.svg#icon-profile">
-            </use>
-          </svg>
-          <span>Вход</span>
-        </button>
-        <button class="btn au-form__btn-reg au-form__btn-reg--active">Регистрация</button>
-        <button class="btn au-form__btn-like au-form__btn-like--active">
-          <span class="au-form__notification">0</span>
-          <svg class="au-form__icon-like">
-            <use href="img/sprite/sprite.svg#icon-heart ">
-            </use>
-          </svg>
-        </button>
-        <button class="btn au-form__btn-inbox au-form__btn-inbox--active">
-          <span class="au-form__notification">0</span>
-          <svg class="au-form__icon-inbox">
-            <use href="img/sprite/sprite.svg#icon-email">
-            </use>
-          </svg>
-        </button>
+        <div class="au-formWRP">
+          <div class="au-formWRP__regLogin">
+            <button class="btn au-form__btn-login au-form__btn-login--active">
+              <svg class="au-form__icon-profile">
+                <use href="img/sprite/sprite.svg#icon-profile">
+                </use>
+              </svg>
+              <span>Вход</span>
+            </button>
+            <button class="btn au-form__btn-reg au-form__btn-reg--active">Регистрация</button>
+          </div>
+          <button class="btn au-form__btn-like au-form__btn-like--active">
+            <span class="au-form__notification">0</span>
+            <svg class="au-form__icon-like">
+              <use href="img/sprite/sprite.svg#icon-heart ">
+              </use>
+            </svg>
+          </button>
+          <button class="btn au-form__btn-inbox au-form__btn-inbox--active">
+            <span class="au-form__notification">0</span>
+            <svg class="au-form__icon-inbox">
+              <use href="img/sprite/sprite.svg#icon-email">
+              </use>
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
   </div>
